--- a/styles/pages/_404.scss
+++ b/styles/pages/_404.scss
@@ -5,7 +5,7 @@
     padding: 0;
   }
 
-  #not-found-section {
+  .not-found-section {
     @include row-center;
     @extend .pre-footer;
     padding: 0;
