--- a/styles/styles.css
+++ b/styles/styles.css
@@ -549,6 +549,7 @@ section .headline-description {
   letter-spacing: 0.25px;
   line-height: 120%;
   margin-block-end: 64px;
+  text-wrap: balance;
 }
 @media screen and (max-width: 768px) {
   section .headline-description {
@@ -2674,13 +2675,13 @@ ul.classic-list li {
   gap: 16px;
 }
 
-.pre-footer, .page-not-found #not-found-section {
+.pre-footer, .page-not-found .not-found-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.pre-footer .pre-footer-title, .page-not-found #not-found-section .pre-footer-title, .page-not-found #not-found-section .not-found-title {
+.pre-footer .pre-footer-title, .page-not-found .not-found-section .pre-footer-title, .page-not-found .not-found-section .not-found-title {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -2688,57 +2689,57 @@ ul.classic-list li {
   margin-block-end: 40px;
 }
 @media screen and (max-width: 768px) {
-  .pre-footer .pre-footer-title, .page-not-found #not-found-section .pre-footer-title, .page-not-found #not-found-section .not-found-title {
+  .pre-footer .pre-footer-title, .page-not-found .not-found-section .pre-footer-title, .page-not-found .not-found-section .not-found-title {
     gap: 12px;
   }
 }
 @media screen and (max-width: 768px) {
-  .pre-footer .pre-footer-title h2, .page-not-found #not-found-section .pre-footer-title h2, .page-not-found #not-found-section .not-found-title h2 {
+  .pre-footer .pre-footer-title h2, .page-not-found .not-found-section .pre-footer-title h2, .page-not-found .not-found-section .not-found-title h2 {
     font-size: 40px;
     margin-block-end: 0;
   }
 }
 @media screen and (max-width: 480px) {
-  .pre-footer .pre-footer-title h2, .page-not-found #not-found-section .pre-footer-title h2, .page-not-found #not-found-section .not-found-title h2 {
+  .pre-footer .pre-footer-title h2, .page-not-found .not-found-section .pre-footer-title h2, .page-not-found .not-found-section .not-found-title h2 {
     font-size: 28px;
   }
 }
-.pre-footer .pre-footer-title span, .page-not-found #not-found-section .pre-footer-title span, .page-not-found #not-found-section .not-found-title span {
+.pre-footer .pre-footer-title span, .page-not-found .not-found-section .pre-footer-title span, .page-not-found .not-found-section .not-found-title span {
   font-weight: 900;
 }
-.pre-footer .pre-footer-title .icon-wrapper, .page-not-found #not-found-section .pre-footer-title .icon-wrapper, .page-not-found #not-found-section .not-found-title .icon-wrapper {
+.pre-footer .pre-footer-title .icon-wrapper, .page-not-found .not-found-section .pre-footer-title .icon-wrapper, .page-not-found .not-found-section .not-found-title .icon-wrapper {
   height: 40px;
   width: 40px;
 }
 @media screen and (max-width: 1512px) {
-  .pre-footer .pre-footer-title .icon-wrapper, .page-not-found #not-found-section .pre-footer-title .icon-wrapper, .page-not-found #not-found-section .not-found-title .icon-wrapper {
+  .pre-footer .pre-footer-title .icon-wrapper, .page-not-found .not-found-section .pre-footer-title .icon-wrapper, .page-not-found .not-found-section .not-found-title .icon-wrapper {
     width: 36px;
     height: 36px;
   }
 }
 @media screen and (max-width: 1200px) {
-  .pre-footer .pre-footer-title .icon-wrapper, .page-not-found #not-found-section .pre-footer-title .icon-wrapper, .page-not-found #not-found-section .not-found-title .icon-wrapper {
+  .pre-footer .pre-footer-title .icon-wrapper, .page-not-found .not-found-section .pre-footer-title .icon-wrapper, .page-not-found .not-found-section .not-found-title .icon-wrapper {
     width: 32px;
     height: 32px;
   }
 }
 @media screen and (max-width: 768px) {
-  .pre-footer .pre-footer-title .icon-wrapper, .page-not-found #not-found-section .pre-footer-title .icon-wrapper, .page-not-found #not-found-section .not-found-title .icon-wrapper {
+  .pre-footer .pre-footer-title .icon-wrapper, .page-not-found .not-found-section .pre-footer-title .icon-wrapper, .page-not-found .not-found-section .not-found-title .icon-wrapper {
     height: 24px;
     width: 24px;
   }
 }
 @media screen and (max-width: 480px) {
-  .pre-footer .pre-footer-title .icon-wrapper, .page-not-found #not-found-section .pre-footer-title .icon-wrapper, .page-not-found #not-found-section .not-found-title .icon-wrapper {
+  .pre-footer .pre-footer-title .icon-wrapper, .page-not-found .not-found-section .pre-footer-title .icon-wrapper, .page-not-found .not-found-section .not-found-title .icon-wrapper {
     height: 16px;
     width: 16px;
   }
 }
-.pre-footer .pre-footer-title .icon-wrapper svg, .page-not-found #not-found-section .pre-footer-title .icon-wrapper svg, .page-not-found #not-found-section .not-found-title .icon-wrapper svg {
+.pre-footer .pre-footer-title .icon-wrapper svg, .page-not-found .not-found-section .pre-footer-title .icon-wrapper svg, .page-not-found .not-found-section .not-found-title .icon-wrapper svg {
   width: 100%;
   height: 100%;
 }
-.pre-footer .headline-description, .page-not-found #not-found-section .headline-description {
+.pre-footer .headline-description, .page-not-found .not-found-section .headline-description {
   text-align: center;
 }
 
@@ -2748,7 +2749,7 @@ ul.classic-list li {
 .page-not-found main {
   padding: 0;
 }
-.page-not-found #not-found-section {
+.page-not-found .not-found-section {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -2757,34 +2758,34 @@ ul.classic-list li {
   height: 100dvh;
   min-height: 680px;
 }
-.page-not-found #not-found-section .not-found-title {
+.page-not-found .not-found-section .not-found-title {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 @media screen and (max-width: 768px) {
-  .page-not-found #not-found-section .not-found-title {
+  .page-not-found .not-found-section .not-found-title {
     margin-block-end: 16px;
   }
 }
-.page-not-found #not-found-section .not-found-title h2 {
+.page-not-found .not-found-section .not-found-title h2 {
   color: #e48c66;
   font-size: 64px;
 }
 @media screen and (max-width: 768px) {
-  .page-not-found #not-found-section .not-found-title h2 {
+  .page-not-found .not-found-section .not-found-title h2 {
     font-size: 40px;
     margin-block-end: 0;
   }
 }
 @media screen and (max-width: 480px) {
-  .page-not-found #not-found-section .not-found-title h2 {
+  .page-not-found .not-found-section .not-found-title h2 {
     font-size: 28px;
   }
 }
 @media screen and (max-width: 768px) {
-  .page-not-found #not-found-section .headline-description {
+  .page-not-found .not-found-section .headline-description {
     margin-block-end: 48px;
   }
 }
